--- a/assets/style.css
+++ b/assets/style.css
@@ -101,6 +101,7 @@ body {
 	justify-content: center;
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
+	color: unset;
 	background-color: #BEB45A;
 	border-radius:0 ;
 }
