--- a/assets/style.css
+++ b/assets/style.css
@@ -1,24 +1,24 @@
 @font-face {
     font-family: 'Inter';
-    src: url('Fonts/Inter/static/Inter-Regular.ttf') format('truetype');
+    src: local('Inter'), url('Fonts/Inter/static/Inter-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'Spectral';
-    src: url('Fonts/Spectral/Spectral-ExtraBold.ttf') format('truetype');
+    src: local('Spectral'), local('Spectral-ExtraBold'), url('Fonts/Spectral/Spectral-ExtraBold.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'Spectral';
-    src: url('Fonts/Spectral/Spectral-ExtraBoldItalic.ttf') format('truetype');
+    src: local('Spectral'), local('Spectral-ExtraBoldItalic'), url('Fonts/Spectral/Spectral-ExtraBoldItalic.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'Spectral';
-    src: url('Fonts/Spectral/Spectral-LightItalic.ttf') format('truetype');
+    src: local('Spectral'), local('Spectral-LightItalic'), url('Fonts/Spectral/Spectral-LightItalic.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
